# swiftness

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  clippy.toml  runtime.dockerfile  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: cargo_publish.yaml  ci.yml  docker_publish.yaml  npm_publish.yaml
cli/: Cargo.toml  README.md
cli/src/: lib.rs  main.rs  transform.rs
crates/air/: Cargo.toml  README.md  build.rs
crates/air/src/: consts.rs  diluted.rs  domains.rs  dynamic.rs  lib.rs  periodic_columns.rs  public_memory.rs  types.rs
crates/air/src/fixtures/: commitment.rs  config.rs  decommitment.rs  interaction_elements.rs  mod.rs  public_input.rs  unsent_commitment.rs  witness.rs
crates/air/src/layout/: autogenerated.py  errors.rs  mod.rs  utils.rs
crates/air/src/layout/dex/: autogenerated.rs  global_values.rs  mod.rs
crates/air/src/layout/dex/autogenerated/: autogenerated_composition.rs  autogenerated_oods.rs
crates/air/src/layout/dynamic/: autogenerated.rs  global_values.rs  mod.rs
crates/air/src/layout/dynamic/autogenerated/: autogenerated_asserts.rs  autogenerated_composition.rs  autogenerated_oods.rs
crates/air/src/layout/recursive/: autogenerated.rs  global_values.rs  mod.rs  trace.rs
crates/air/src/layout/recursive/autogenerated/: autogenerated_composition.rs  autogenerated_oods.rs
crates/air/src/layout/recursive/tests/: mod.rs  trace_commitment.rs  trace_config.rs  trace_decommitment.rs  trace_witness.rs
crates/air/src/layout/recursive_with_poseidon/: autogenerated.rs  global_values.rs  mod.rs
crates/air/src/layout/recursive_with_poseidon/autogenerated/: autogenerated_composition.rs  autogenerated_oods.rs
crates/air/src/layout/small/: autogenerated.rs  global_values.rs  mod.rs
crates/air/src/layout/small/autogenerated/: autogenerated_composition.rs  autogenerated_oods.rs
crates/air/src/layout/starknet/: autogenerated.rs  global_values.rs  mod.rs
crates/air/src/layout/starknet/autogenerated/: autogenerated_composition.rs  autogenerated_oods.rs
crates/air/src/layout/starknet_with_keccak/: autogenerated.rs  global_values.rs  mod.rs
crates/air/src/layout/starknet_with_keccak/autogenerated/: autogenerated_composition.rs  autogenerated_oods.rs
crates/air/src/tests/: commitment.rs  config.rs  mod.rs  public_input.rs  unsent_commitment.rs
crates/air/src/trace/: config.rs  decommit.rs  mod.rs
crates/air/src/types/: trace.rs
crates/channel/: Cargo.toml
crates/channel/src/: lib.rs
crates/commitment/: Cargo.toml  README.md  build.rs
crates/commitment/src/: lib.rs
crates/commitment/src/table/: commit.rs  config.rs  decommit.rs  mod.rs  types.rs
crates/commitment/src/table/tests/: mod.rs  table_commitment_commit.rs  table_commitment_decommit.rs
crates/commitment/src/vector/: commit.rs  config.rs  decommit.rs  mod.rs  types.rs
crates/commitment/src/vector/tests/: mod.rs  vector_commitment_commit.rs  vector_commitment_decommit.rs
crates/common/: Cargo.toml
crates/fri/: Cargo.toml  README.md
crates/fri/src/: config.rs  first_layer.rs  formula.rs  fri.rs  group.rs  last_layer.rs  layer.rs  lib.rs  types.rs
crates/fri/src/fixtures/: commitment.rs  config.rs  decommitment.rs  last_layer_coefficients.rs  mod.rs  queries.rs  unsent_commitment.rs  witness.rs
crates/fri/src/tests/: commit.rs  config.rs  decommit.rs  formula.rs  last_layer.rs  last_layer_coefficients.rs  mod.rs  next_layer.rs  queries.rs  unsent_commitment.rs  verify.rs  witness.rs
crates/funvec/: Cargo.toml
crates/funvec/src/: lib.rs
crates/pow/: Cargo.toml  README.md  build.rs
crates/pow/src/: config.rs  lib.rs  pow.rs  types.rs
crates/pow/src/fixtures/: config.rs  mod.rs  unsent_commitment.rs
crates/pow/src/tests/: config.rs  mod.rs  unsent_commitment.rs
crates/stark/: Cargo.toml  README.md
crates/stark/src/: commit.rs  config.rs  lib.rs  oods.rs  queries.rs  stark.rs  types.rs  verify.rs
crates/stark/src/fixtures/: commitment.rs  config.rs  constraint_coefficients.rs  domains.rs  mod.rs  oods_values.rs  public_input.rs  unsent_commitment.rs  witness.rs
crates/stark/src/tests/: commit.rs  commitment.rs  config.rs  constraint_coefficients.rs  domains.rs  mod.rs  proof.rs  proof_verify.rs  unsent_commitment.rs  verify.rs  verify_oods.rs  witness.rs
crates/transcript/: Cargo.toml  README.md
crates/transcript/src/: lib.rs  transcript.rs
crates/transcript/src/tests/: mod.rs  random_felt_to_prover.rs  random_felts_to_prover.rs  read_felt_from_prover.rs  read_felt_vector_from_prover.rs  read_uint64_from_prover.rs
ensure_no_std/: Cargo.toml  rust-toolchain.toml
ensure_no_std/src/: main.rs
examples/arm_build/: Cargo.toml  rust-toolchain.toml
examples/arm_build/.cargo/: config.toml
examples/no_std/: Cargo.toml
examples/no_std_build/: Cargo.toml  rust-toolchain.toml
examples/no_std_build/.cargo/: config.toml
examples/no_std_build/src/: main.rs
examples/no_std_example/: Cargo.toml  rust-toolchain.toml
examples/no_std_example/src/: main.rs
examples/proofs/: 100_blocks_hdp_v2_proof.json  2k_blocks_hdp_proof.json  cpu_air_params.json  generate,py  simple_hdp_v2_proof.json
examples/proofs/dex/: cairo0_stone6_example_proof.json
examples/proofs/dynamic/: cairo0_example_proof.json  cairo0_fibonacci.cairo  cairo_layout_params.json  (+1 more)
examples/riscv_build/: Cargo.toml  rust-toolchain.toml
proof-parser/: Cargo.toml
proof-parser/src/: builtins.rs  conversion.rs  json_parser.rs  layout.rs  lib.rs  stark_proof.rs
proof-parser/src/annotations/: annotation_kind.rs  extract.rs  mod.rs
proof_parser/: Cargo.toml  README.md
proof_parser/src/: builtins.rs  conversion.rs  json_parser.rs  layout.rs  lib.rs  stark_proof.rs  utils.rs
proof_parser/src/annotations/: extract.rs
proof_parser/tests/: verify.rs
wasm-binding/: Cargo.toml  README.md
wasm-binding/pkg/: README.md  package.json
wasm-binding/src/: lib.rs
wasm-binding/web/: index.html  main.js
wasm_bindings/: .gitignore  Cargo.toml  README.md  generate.sh  package.json  tsconfig.json
wasm_bindings/src/: lib.rs  swiftness.ts
(+6 files in other folders)
