[profile.release]
overflow-checks = true

[workspace]
resolver = "2"
members = [
    "crates/air",
    "crates/transcript",
    "crates/commitment",
    "crates/fri",
    "crates/pow",
    "crates/stark",
    "proof-parser",
    "cli", "wasm-binding",
]
exclude = []

[workspace.package]
description = "Swiftness - Rust CairoVM Verifier implementation"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/iosis-tech/swiftness"

[workspace.dependencies]
bail-out = "0.2.0"
serde_json = "1.0.114"
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.3.2"
sha3 = "0.10.8"
starknet-core = "0.11.1"
starknet-crypto = "0.7.1"
starknet-types-core = "0.1.5"
crypto-bigint = "0.5.5"
thiserror = "1.0.61"
num-bigint = { version = "0.4.4", features = ["serde"] }
blake2 = "0.10.6"
wasm-bindgen = "0.2"

swiftness_air = { path = "crates/air", default-features = false, version = "0.0.3" }
swiftness_commitment = { path = "crates/commitment", default-features = false, version = "0.0.3" }
swiftness_fri = { path = "crates/fri", default-features = false, version = "0.0.3" }
swiftness_pow = { path = "crates/pow", default-features = false, version = "0.0.3" }
swiftness_stark = { path = "crates/stark", default-features = false, version = "0.0.3" }
swiftness_transcript = { path = "crates/transcript", default-features = false, version = "0.0.3" }
swiftness_proof_parser = { path = "proof-parser", default-features = false, version = "0.0.3" }
