[profile.release]
overflow-checks = true

[workspace]
resolver = "2"
members = [
    "crates/air",
    "crates/transcript",
    "crates/commitment",
    "crates/fri",
    "crates/pow",
    "crates/stark",
]
exclude = [
    "cli",
    "proof_parser",
    "wasm_bindings",
    "examples/no_std_build",
]

[workspace.package]
description = "Swiftness - Rust CairoVM Verifier implementation"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/iosis-tech/swiftness"
version = "0.0.7"

[workspace.dependencies]
blake2 = { version = "0.10.6",  default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.114",  default-features = false }
serde_with = { version = "3.8.3",  default-features = false, features = ["macros"] }
sha3 = { version = "0.10.8",  default-features = false }
starknet-core = { version = "0.11.1", default-features = false }
starknet-crypto = { version = "0.7.1", default-features = false }
starknet-types-core = { version = "0.1.5", default-features = false }
thiserror = "1.0.61"
thiserror-no-std = "2.0.2"

swiftness_air = { path = "crates/air", default-features = false, version = "0.0.7" }
swiftness_commitment = { path = "crates/commitment", default-features = false, version = "0.0.7" }
swiftness_fri = { path = "crates/fri", default-features = false, version = "0.0.7" }
swiftness_pow = { path = "crates/pow", default-features = false, version = "0.0.7" }
swiftness_stark = { path = "crates/stark", default-features = false, version = "0.0.7" }
swiftness_transcript = { path = "crates/transcript", default-features = false, version = "0.0.7" }
