[package]
name = "swiftness"
description = "Swiftness - Rust CairoVM Verifier implementation"
edition = "2021"
license-file = "LICENSE"
readme = "../README.md"
repository = "https://github.com/iosis-tech/swiftness"
version = "0.1.3"

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }

swiftness_air = { path = "../crates/air", default-features = false, features = [
    "std",
], version = "0.1.3" }
swiftness_commitment = { path = "../crates/commitment", default-features = false, features = [
    "std",
], version = "0.1.3" }
swiftness_fri = { path = "../crates/fri", default-features = false, features = [
    "std",
], version = "0.1.3" }
swiftness_pow = { path = "../crates/pow", default-features = false, features = [
    "std",
], version = "0.1.3" }
swiftness_stark = { path = "../crates/stark", default-features = false, features = [
    "std",
], version = "0.1.3" }
swiftness_proof_parser = { path = "../proof_parser", version = "0.1.3" }

[features]
default = ["recursive", "keccak_160_lsb", "stone5"]
dex = ["swiftness_air/dex", "swiftness_stark/dex"]
recursive = ["swiftness_air/recursive", "swiftness_stark/recursive"]
recursive_with_poseidon = [
    "swiftness_air/recursive_with_poseidon",
    "swiftness_stark/recursive_with_poseidon",
]
small = ["swiftness_air/small", "swiftness_stark/small"]
starknet = ["swiftness_air/starknet", "swiftness_stark/starknet"]
starknet_with_keccak = [
    "swiftness_air/starknet_with_keccak",
    "swiftness_stark/starknet_with_keccak",
]
dynamic = [
    "swiftness_air/dynamic",
    "swiftness_stark/dynamic",
]
stone5 = [
    "swiftness_air/stone5",
    "swiftness_stark/stone5",
]
stone6 = [
    "swiftness_air/stone6",
    "swiftness_stark/stone6",
]
keccak_160_lsb = [
    "swiftness_air/keccak_160_lsb",
    "swiftness_stark/keccak_160_lsb",
]
keccak_248_lsb = [
    "swiftness_air/keccak_248_lsb",
    "swiftness_stark/keccak_248_lsb",
]
blake2s_160_lsb = [
    "swiftness_air/blake2s_160_lsb",
    "swiftness_stark/blake2s_160_lsb",
]
blake2s_248_lsb = [
    "swiftness_air/blake2s_248_lsb",
    "swiftness_stark/blake2s_248_lsb",
]