[package]
name = "ensure_no_std"
version = "0.1.0"
edition = "2021"

[dependencies]
cairovm_verifier_air = { path = "crates/air", default-features = false }
cairovm_verifier_stark = { path = "crates/stark", default-features = false }
cairovm_verifier_proof_parser = { path = "proof-parser", default-features = false }

[features]
default = ["recursive", "keccak"]
dex = []
recursive = []
recursive_with_poseidon = []
small = []
starknet = []
starknet_with_keccak = []
keccak = []
blake2s = []
