[package]
name = "swiftness_proof_parser"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
starknet-types-core.workspace = true
num-bigint.workspace = true
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
regex = "1.10.3"
serde_json = "1.0.114"

swiftness_stark.workspace = true
swiftness_commitment.workspace = true
swiftness_fri.workspace = true
swiftness_air.workspace = true
swiftness_pow.workspace = true