[package]
name = "cairovm_verifier_proof_parser"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["std"]
std = ["dep:thiserror"]
keccak = []
blake2s = []

[dependencies]
serde.workspace = true
thiserror = { optional = true, workspace = true }
thiserror-no-std.workspace = true
starknet-types-core.workspace = true
num-bigint.workspace = true
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
regex = "1.10.3"
serde_json = "1.0.114"

cairovm_verifier_stark = { path = "../crates/stark", default-features = false }
cairovm_verifier_commitment = { path = "../crates/commitment", default-features = false }
cairovm_verifier_fri = { path = "../crates/fri", default-features = false }
cairovm_verifier_air = { path = "../crates/air", default-features = false }
cairovm_verifier_pow = { path = "../crates/pow", default-features = false }
