[package]
name = "cairovm_verifier_proof_parser"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["keccak", "recursive"]
keccak = ["cairovm_verifier_pow/keccak", "cairovm_verifier_commitment/keccak"]
blake2s = [
    "cairovm_verifier_pow/blake2s",
    "cairovm_verifier_commitment/blake2s",
]
dex = ["cairovm_verifier_air/dex", "cairovm_verifier_stark/dex"]
recursive = [
    "cairovm_verifier_air/recursive",
    "cairovm_verifier_stark/recursive",
]
recursive_with_poseidon = [
    "cairovm_verifier_air/recursive_with_poseidon",
    "cairovm_verifier_stark/recursive_with_poseidon",
]
small = ["cairovm_verifier_air/small", "cairovm_verifier_stark/small"]
starknet = ["cairovm_verifier_air/starknet", "cairovm_verifier_stark/starknet"]
starknet_with_keccak = [
    "cairovm_verifier_air/starknet_with_keccak",
    "cairovm_verifier_stark/starknet_with_keccak",
]

[dependencies]
serde.workspace = true
thiserror.workspace = true
starknet-types-core.workspace = true
num-bigint.workspace = true
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
regex = "1.10.3"
serde_json = "1.0.114"

cairovm_verifier_stark = { path = "../crates/stark", features = [
    "std",
], default-features = false }
cairovm_verifier_commitment = { path = "../crates/commitment", features = [
    "std",
], default-features = false }
cairovm_verifier_fri = { path = "../crates/fri", features = [
    "std",
], default-features = false }
cairovm_verifier_air = { path = "../crates/air", features = [
    "std",
], default-features = false }
cairovm_verifier_pow = { path = "../crates/pow", features = [
    "std",
], default-features = false }
