[package]
name = "swiftness_proof_parser"
description = "Json Proof Parser for Swiftness - Rust CairoVM Verifier implementation"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/iosis-tech/swiftness"
version = "0.1.0"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
num-bigint = { version = "0.4.4", features = ["serde"] }
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
starknet-crypto = "0.7.1"
starknet-types-core = "0.1.5"
thiserror = "1.0.61"