[package]
name = "swiftness_wasm"
description = "Swiftness CairoVM Verifier | swiftness-{layout}-{commitment hash}"
edition.workspace = true
license = "Apache-2.0"
readme.workspace = true
repository.workspace = true
version = "0.0.3"

[dependencies]
serde_json.workspace = true
wasm-bindgen.workspace = true

swiftness_air = { workspace = true, default-features = false }
swiftness_stark = { workspace = true, default-features = false }
swiftness_proof_parser = { workspace = true, default-features = false }

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.15", features = ["js"] }

[features]
default = ["starknet_with_keccak", "keccak"]
dex = []
recursive = []
recursive_with_poseidon = []
small = []
starknet = []
starknet_with_keccak = []
keccak = []
blake2s = []