[package]
name = "cairovm_verifier_wasm"
description = "CairoVM verifier - starknet_with_keccak & blake2s"
edition.workspace = true
homepage.workspace = true
license = "Apache-2.0"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
serde_json.workspace = true
wasm-bindgen.workspace = true

cairovm_verifier_air = { path = "../crates/air", default-features = false }
cairovm_verifier_stark = { path = "../crates/stark", default-features = false }
cairovm_verifier_proof_parser = { path = "../proof-parser", default-features = false }

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.15", features = ["js"] }

[features]
default = ["starknet_with_keccak", "keccak"]
dex = []
recursive = []
recursive_with_poseidon = []
small = []
starknet = []
starknet_with_keccak = []
keccak = []
blake2s = []
