[package]
name = "swiftness_wasm"
description = "Swiftness CairoVM Verifier | swiftness-{layout}-{commitment hash}"
edition.workspace = true
license = "Apache-2.0"
readme = "README.md"
repository.workspace = true
version.workspace = true

[dependencies]
serde_json.workspace = true
wasm-bindgen.workspace = true

swiftness_air = { workspace = true }
swiftness_stark = { workspace = true }
swiftness_proof_parser = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.15", features = ["js"] }

[features]
default = ["starknet_with_keccak", "blake2s"]
dex = []
recursive = []
recursive_with_poseidon = []
small = []
starknet = []
starknet_with_keccak = []
keccak = []
blake2s = []