[package]
name = "swiftness_wasm"
description = "Swiftness CairoVM Verifier | swiftness-{layout}-{commitment hash}"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/iosis-tech/swiftness"
version = "0.1.2"

[dependencies]
serde_json = "1.0.114"
wasm-bindgen = "0.2"

swiftness = { path = "../cli", default-features = false, version = "0.1.2" }
swiftness_air = { path = "../crates/air", default-features = false, features = [
    "std",
], version = "0.1.2" }
swiftness_stark = { path = "../crates/stark", default-features = false, features = [
    "std",
], version = "0.1.2" }
swiftness_proof_parser = { path = "../proof_parser", version = "0.1.2" }

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.15", features = ["js"] }

[features]
default = ["recursive", "keccak_160_lsb", "stone5"]
dex = [
    "swiftness/dex",
    "swiftness_air/dex",
    "swiftness_stark/dex"
]
recursive = [
    "swiftness/recursive",
    "swiftness_air/recursive",
    "swiftness_stark/recursive",
]
recursive_with_poseidon = [
    "swiftness/recursive_with_poseidon",
    "swiftness_air/recursive_with_poseidon",
    "swiftness_stark/recursive_with_poseidon",
]
small = [
    "swiftness/small",
    "swiftness_air/small",
    "swiftness_stark/small"
]
starknet = [
    "swiftness/starknet",
    "swiftness_air/starknet",
    "swiftness_stark/starknet"
]
starknet_with_keccak = [
    "swiftness/starknet_with_keccak",
    "swiftness_air/starknet_with_keccak",
    "swiftness_stark/starknet_with_keccak",
]
dynamic = [
    "swiftness/dynamic",
    "swiftness_air/dynamic",
    "swiftness_stark/dynamic",
]
stone5 = [
    "swiftness/stone5",
    "swiftness_air/stone5",
    "swiftness_stark/stone5",
]
stone6 = [
    "swiftness/stone6",
    "swiftness_air/stone6",
    "swiftness_stark/stone6",
]
keccak_160_lsb = [
    "swiftness/keccak_160_lsb",
    "swiftness_stark/keccak_160_lsb",
]
keccak_248_lsb = [
    "swiftness/keccak_248_lsb",
    "swiftness_stark/keccak_248_lsb",
]
blake2s_160_lsb = [
    "swiftness/blake2s_160_lsb",
    "swiftness_stark/blake2s_160_lsb",
]
blake2s_248_lsb = [
    "swiftness/blake2s_248_lsb",
    "swiftness_stark/blake2s_248_lsb",
]