[package]
name = "swiftness_air"
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[dependencies]
bail-out.workspace = true
serde_with.workspace = true
serde.workspace = true
starknet-core.workspace = true
starknet-crypto.workspace = true
thiserror.workspace = true

swiftness_commitment.workspace = true
swiftness_transcript.workspace = true

[features]
default = ["recursive"]
dex = []
recursive = []
recursive_with_poseidon = []
small = []
starknet = []
starknet_with_keccak = []
