[package]
name = "swiftness_air"
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[features]
default = ["std", "recursive", "keccak_160_lsb", "stone5"]
std = [
    "dep:thiserror",
    "swiftness_commitment/std",
    "swiftness_transcript/std",
    "starknet-core/std",
    "starknet-crypto/std",
]
dex = []
recursive = []
recursive_with_poseidon = []
small = []
starknet = []
starknet_with_keccak = []
dynamic = []
stone5 = []
stone6 = []
keccak_160_lsb = ["swiftness_commitment/keccak_160_lsb"]
keccak_248_lsb = ["swiftness_commitment/keccak_248_lsb"]
blake2s_160_lsb = ["swiftness_commitment/blake2s_160_lsb"]
blake2s_248_lsb = ["swiftness_commitment/blake2s_248_lsb"]
test_fixtures = []

[dependencies]
funvec.workspace = true
bytemuck.workspace = true
num-bigint.workspace = true
serde_with.workspace = true
serde.workspace = true
starknet-core.workspace = true
starknet-crypto.workspace = true
starknet-types-core.workspace = true
thiserror = { optional = true, workspace = true }
thiserror-no-std.workspace = true

swiftness_commitment.workspace = true
swiftness_transcript.workspace = true
