[package]
name = "swiftness_commitment"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme = "README.md"
repository.workspace = true
version = "0.0.3"

[dependencies]
serde_with.workspace = true
serde.workspace = true
sha3.workspace = true
starknet-core.workspace = true
starknet-types-core.workspace = true
starknet-crypto.workspace = true
thiserror.workspace = true
crypto-bigint.workspace = true
blake2.workspace = true

swiftness_transcript.workspace = true

[features]
default = ["keccak"]
keccak = []
blake2s = []
