[package]
name = "cairovm_verifier_commitment"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["std", "keccak"]
std = ["dep:thiserror"]
keccak = []
blake2s = []


[dependencies]
serde_with.workspace = true
serde.workspace = true
sha3.workspace = true
starknet-core.workspace = true
starknet-types-core.workspace = true
starknet-crypto.workspace = true
thiserror = { optional = true, workspace = true }
thiserror-no-std.workspace = true
crypto-bigint.workspace = true
blake2.workspace = true

cairovm_verifier_transcript = { path = "../transcript", default-features = false }
