[package]
name = "swiftness_fri"
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[features]
default = ["std"]
std = ["dep:thiserror"]
keccak = []
blake2s = []

[dependencies]
serde_with.workspace = true
serde.workspace = true
sha3.workspace = true
starknet-core.workspace = true
starknet-crypto.workspace = true
thiserror = { optional = true, workspace = true }
thiserror-no-std.workspace = true

swiftness_air.workspace = true
swiftness_commitment.workspace = true
swiftness_transcript.workspace = true
