[package]
name = "funvec"
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
starknet-crypto.workspace = true
solana-program = { git = "https://github.com/Okm165/solana.git", branch = "fix/deps" }
