[package]
name = "cairovm_verifier_pow"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bail-out.workspace = true
serde.workspace = true
sha3.workspace = true
starknet-crypto.workspace = true
starknet-types-core.workspace = true
thiserror.workspace = true
blake2.workspace = true

cairovm_verifier_transcript.workspace = true

[features]
default = ["keccak"]
keccak = []
blake2s = []