[package]
name = "swiftness_pow"
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme = "README.md"
repository.workspace = true
version = "0.0.3"

[dependencies]
bail-out.workspace = true
serde.workspace = true
sha3.workspace = true
starknet-crypto.workspace = true
starknet-types-core.workspace = true
thiserror.workspace = true
blake2.workspace = true

swiftness_transcript.workspace = true

[features]
default = ["keccak"]
keccak = []
blake2s = []
