[package]
name = "swiftness_pow"
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[features]
default = ["std", "keccak"]
std = [
    "dep:thiserror",
    "swiftness_transcript/std",
    "starknet-crypto/std",
]
keccak = []
blake2s = []

[dependencies]
serde.workspace = true
sha3.workspace = true
starknet-crypto.workspace = true
starknet-types-core.workspace = true
thiserror = { optional = true, workspace = true }
thiserror-no-std.workspace = true
blake2.workspace = true

swiftness_transcript.workspace = true