[package]
name = "swiftness_stark"
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[features]
default = ["std", "recursive"]
std = [
    "dep:thiserror",
    "swiftness_air/std",
    "swiftness_commitment/std",
    "swiftness_fri/std",
    "swiftness_pow/std",
]
dex = []
recursive = []
recursive_with_poseidon = []
small = []
starknet = []
starknet_with_keccak = []

[dependencies]
bail-out.workspace = true
serde_with.workspace = true
serde.workspace = true
starknet-core.workspace = true
starknet-crypto.workspace = true
thiserror = { optional = true, workspace = true }
thiserror-no-std.workspace = true
wasm-bindgen.workspace = true

swiftness_air.workspace = true
swiftness_commitment.workspace = true
swiftness_fri.workspace = true
swiftness_pow.workspace = true
swiftness_transcript.workspace = true
